--- a/projetoDio/src/main/webapp/WEB-INF/templates/layout.xhtml
+++ b/projetoDio/src/main/webapp/WEB-INF/templates/layout.xhtml
@@ -15,7 +15,7 @@
 
 <h:body>
 	<header>
-		<h:graphicImage library="dio" name="logo.png" />
+		<h:graphicImage library="dio" />
 	</header>
 	
 	<h2>
@@ -27,7 +27,7 @@
 	</div>
 	
 	<footer>
-		Curso online "JSF e PrimeFaces Essencial"
+		Diógenes Melo
 	</footer>
 </h:body>
 
