inclusao de validacao de campos e apresentacao de mensagens

--- a/projetoDio/src/main/webapp/WEB-INF/templates/layout.xhtml
+++ b/projetoDio/src/main/webapp/WEB-INF/templates/layout.xhtml
@@ -7,7 +7,7 @@
 <h:head>
 
 <meta charset="UTF-8"/>
-<title>Cadastro</title>
+<title>Cadastroooo</title>
 
 <h:outputStylesheet library="dio" name="estilo.css" />
 
