--- a/projetoDio/src/main/webapp/resources/dio/estilo.css
+++ b/projetoDio/src/main/webapp/resources/dio/estilo.css
@@ -23,7 +23,7 @@ header {
 footer {
 	border-top: 1px solid #ccc;
 	padding: 5px 8px;
-	margin-top: 20px;
+	margin-top: 40px;
 	margin-bottom: 10px
 }
 
@@ -31,6 +31,5 @@ h1 {
 	font-size: 24px;
 	font-weight: 500;
 	padding: 0px;
-	margin: 0px;
-	margin-bottom: 10px
+	margin: 0px
 }
